# itmo-is-ml-dt-2024-5-sem

./: Cargo.toml
src/: decision_tree.rs  lib.rs  main.rs  parse.rs  random_forest.rs
